# graph-datasets

./: Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: code.yml  container.yml  helm.yml  schema.yml
charts/datasets/: Chart.yaml  values.yaml
charts/datasets/charts/datasets/: Chart.yaml
charts/datasets/charts/datasets/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/datasets/templates/: sealed.yaml
datasets/: Cargo.toml
datasets/src/: graphql.rs  main.rs
datasets/src/graphql/: entity.rs  mod.rs
models/: Cargo.toml  build.rs
