[package]
name = "datasets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-graphql = { version = "7.0.2", default-features = false, features = [
    "chrono",
    "graphiql",
    "tracing",
] }
async-graphql-axum = { version = "7.0.2" }
axum = { version = "0.7.4", features = ["ws"] }
chrono = { version = "0.4.35" }
clap = { version = "4.5.2", features = ["derive", "env"] }
dotenvy = { version = "0.15.7" }
models = { path = "../models" }
sea-orm = { workspace = true }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.0" }

[build-dependencies]
built = { version = "0.7.1" }
